# Convert2EBRF

./: Convert2EBRF.pyw  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/convert2ebrf/: __init__.py  __main__.py  bef2ebrf.py  brf2ebrf.py  brf_to_ebrf.py  utils.py  widgets.py
