[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michael Whapples", email = "mwhapples@aim.com"},
]
dependencies = [
    "pyside6>=6.5.2",
    "brf2ebrf @ git+https://github.com/aphtech/brf2ebrf",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

