[project]
name = "Convert2EBRF"
version = "1.0.0"
description = "Tool for converting files to EBRF"
authors = [
    {name = "Michael Whapples", email = "mwhapples@aim.com"},
]
dependencies = [
    "pyside6>=6.5.2",
    "brf2ebrf @ git+https://github.com/aphtech/brf2ebrf",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "GPL-3[0-or-later"}

[project.gui-scripts]
convert2ebrf = "convert2ebrf.__main__:main"

[tool.pdm.dev-dependencies]
exe = [
    "nuitka>=1.8.4",
]


[tool.pdm.scripts]
build_exe = "python -m nuitka --standalone --enable-plugins=pyside6 --disable-console {args} Convert2EBRF.pyw"
